--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.1
   geocoding: ^3.0.0
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
